updated style to fix look an feel on mobile and desktop for form validation message

--- a/styles/style.css
+++ b/styles/style.css
@@ -853,8 +853,14 @@
   .form_s .form .submit {
     position: relative;
     margin-top: 90px;
+    height: 100px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .submit .btn {
+    width: 40%;
   }
 
   .form_s .form .error_msg {
@@ -865,8 +871,7 @@
     line-height: 18px;
     letter-spacing: 0.03em;
     padding: 8px;
-    margin-left: 5%;
-    width: 65%;
+    width: 100%;
     height: 100%;
     border-left: 5px solid #36b37e;
     display: flex;
@@ -898,7 +903,7 @@
     height: 130px;
     position: relative;
     top: 1200px;
-    top: calc(160vw + 550px);
+    top: calc(160vw + 640px);
     float: left;
     display: flex;
     flex-direction: column;
@@ -1366,7 +1371,14 @@
   }
 
   .form_s .form .submit {
+    flex-direction: row;
     justify-content: flex-start;
+    height: auto;
+  }
+
+  .form_s .form .error_msg {
+    width: 65%;
+    margin-left: 5%;
   }
 
   /* ===================================================================================================== */
